--- a/registrasi.html
+++ b/registrasi.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Register</title>
+    <link rel="stylesheet" type="text/css" href ="style.css">
 </head>
 <body>
-    
+    <div class="login">
+        <img src="profil.png"  class="avatar">
+        <h1>Registrasi</h1>
+        <form>
+            <div class="input-group"><input type="text" placeholder="Nama" name="nama"></div>
+            <div class="input-group"><input type="text" placeholder="Username" name="username"></div>
+            <div class="input-group"><input type="text" placeholder="Password" name="password"></div>
+            <div class="input-group"><input type="text" placeholder="Re-Password" name="re-password"></div>
+            <input type="submit" class="btn" value="Registrasi">
+            <div class="register-link">
+                <p>Back to <a href="#">Login</a></p>
+            </div>
+        </form>
+    </div>
 </body>
+
 </html>
