menghubungkan file html

--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
             <input type="password" class="form-input" placeholder="Enter Password">
             <input type="submit" class="btn" value="Login">
             <div class="register-link">
-                <p>Don't have an account? <a href="#">Register</a></p>
+                <p>Don't have an account? <a href="registrasi.html">Register</a></p>
             </div>
 
         </form>
