--- a/registrasi.html
+++ b/registrasi.html
@@ -17,7 +17,7 @@
             <div class="input-group"><input type="text" placeholder="Re-Password" name="re-password"></div>
             <input type="submit" class="btn" value="Registrasi">
             <div class="register-link">
-                <p>Back to <a href="#">Login</a></p>
+                <p>Back to <a href="login.html">Login</a></p>
             </div>
         </form>
     </div>
