--- a/index.html
+++ b/index.html
@@ -3,86 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galaxy Header</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <header class="galaxy-header">
-        <div class="header-content">
-            <div class="left-section">
-                <div class="logo">
-                    <img src="img/logo.png" alt="Galaxy Logo">
-                </div>
-                <nav class="navbar">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li class="category-menu">
-                            <a href="#">Category</a>
-                            <span class="menu-icon">&#9776;</span>
-                            <div class="dropdown-content">
-                                <a href="#">Sekolah Dasar(SD)</a>
-                                <a href="#">Sekolah Menengah Pertama(SMP)</a>
-                                <a href="#">Sekolah Menengah Akhir(SMA)</a>
-                            </div>
-                        </li>                        
-                        <li><a href="#">Career</a></li>
-                    </ul>
-                </nav>
-                <div class="user-controls">
-                    <button class="sign-in-button">Login/Sign In</button>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Webpage Design</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+
+    <div class="main">
+        <div class="navbar">
+            <div class="icon">
+                <h2 class="logo">ENGLISH GALAXY</h2>
+            </div>
+
+            <div class="menu">
+                <ul>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">ABOUTUS</a></li>
+                    <li><a href="#">CATEGORY</a></li>
+                    <li><a href="#">CARIER</a></li>
+                </ul>
+            </div>
+
+            <div class="search">
+                <input class="srch" type="search" name="" placeholder="Type To text">
+                <a href="#"> <button class="btn">Search</button></a>
+            </div>
+
+        </div> 
+        <div class="content">
+            <h1>Mari <br><span>Bergabung Bersama</span> <br>Kami</h1>
+            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque 
+                 expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus 
+                <br> a quae totam ipsa illum minus laudantium?</p>
+
+                <button class="cn"><a href="#">READ MORE</a></button>
+
+             </div>
+          </div>
+        </div>
+    </div>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <div id="formList">
+        <div id="list">
+            <div class="item">
+                <img src="images/sd.png.png" class="avatar">
+                <div class="content">
+                    <table width="100%" cellspacing="0">
+                        <tr>
+                            <td>Materi SD</td>
+                        </tr>
+                        <tr>
+                            <td>Introduction Basic English Vocabullary</td>
+                        </tr>
+                        <tr>
+                            <td>Basic English Concepts</td>
+                        </tr>
+                       
+                    </table>
                 </div>
             </div>
-            <div class="search-container">
-                <form action="/search" method="get">
-                    <input class="search expandright" id="searchright" type="search" name="q" placeholder="Search">
-                    <label class="button searchbutton" for="searchright"><span class="mglass">&#9906;</span></label>
-                </form>
+            <div class="item">
+                <img src="images/smp.png.png" class="avatar">
+                <div class="content">
+                    <table width="100%" cellspacing="0">
+                        <tr>
+                            <td>Materi SMP</td>
+                        </tr>
+                        <tr>
+                            <td>Present</td>
+                        </tr>
+                        <tr>
+                            <td>Asking and Giving Atention </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
-        </div>
-    </header>
+            <div class="item">
+                <img src="images/sma.png.png" class="avatar">
+                <div class="content">
+                    <table width="100%" cellspacing="0">
+                        <tr>
+                            <td>Materi SMA</td>
+                        </tr>
+                        <tr>
+                            <td>Recount Text</td>
+                        </tr>
+                        <tr>
+                            <td>Narrative Text</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/Ellipse 1.png" class="avatar">
+                <div class="content">
+                    <table width="100%" cellspacing="0">
+                        <tr>
+                            <td>Testimoni</td>
+                        </tr>
+                        <tr>
+                            <td>Nama</td>
+                        </tr>
+                        <tr>
+                            <td>Kelas</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/Ellipse 3.png" class="avatar">
+                <div class="content">
+                    <table width="100%" cellspacing="0">
+                        <tr>
+                            <td>Testimoni</td>
+                        </tr>
+                        <tr>
+                            <td>Nama</td>
+                        </tr>
+                        <tr>
+                            <td>Kelas</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+         </table>
+    </div>
+</div>
+</div>
+    </div>
+    <div class="direction">
+        <button id="prev"> < </button>
+        <button id="next"> > </button>
+    </div>
+    <script src="script.js">
+        document.getElementById('next').onclick = function(){
+    const widthItem = document.querySelector('.item').offsetWidth;
+    document.getElementById('formList').scrollLeft += widthItem;
+}
+    </script>
 
-    <main>
-        hello
-    </main>
-
-    <footer class="galaxy-footer">
-        <div class="footer-first">
-        <div class="left-column">
-        <div class="footer-column about-us-footer">
-            <h3>About Us</h3>
-            <ul>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">Mission</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>        
-        </div>
-        <div class="footer-column support-footer">
-            <h3>Help and Support</h3>
-            <ul>
-                <li><a href="#">English Galaxy FAQs</a></li>
-            </ul>        
-        </div>
-        </div>
-        <div class="right-column">
-        <div class="footer-column social-footer">
-            <h3>Socials</h3>
-            <ul class="social-icons">
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
-            </ul>        
-        </div>
-        </div>
-        </div>
-
-        <div class="footer-second">
-            <p>&copy; 2023 English Galaxy. All Rights Reserved.</p>
-        </div>
-    </footer>
+<footer class="footer">
+    <div class="footer-content">
+        <h1>ENGLISH GALAXY</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
+        <h1>FQ</h1>
+        <img src="images/Circled Envelope.png" alt="Envelope Icon">
+        <img src="images/Instagram Circle.png" alt="Instagram Icon">
+        <img src="images/WhatsApp.png" alt="WhatsApp Icon">
+    </div>
+</footer>
 </body>
 </html>
-
+</body>
+</html>
