--- a/index.html
+++ b/index.html
@@ -1,166 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="reset.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Webpage Design</title>
-    <link rel="stylesheet" type="text/css" href="reset.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
+  <title>Review: The Boy and the Heron</title>
+  <link rel="stylesheet" type="text/css" href="reset.css">
+ <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 
-    <div class="main">
-        <div class="navbar">
-            <div class="icon">
-                <h2 class="logo">ENGLISH GALAXY</h2>
-            </div>
-
-            <div class="menu">
-                <ul>
-                    <li><a href="#">BLOG</a></li>
-                    <li><a href="#">ABOUTUS</a></li>
-                    <li><a href="#">CATEGORY</a></li>
-                    <li><a href="#">CARIER</a></li>
-                </ul>
-            </div>
-
-            <div class="search">
-                <input class="srch" type="search" name="" placeholder="Type To text">
-                <a href="#"> <button class="btn">Search</button></a>
-            </div>
-
-        </div> 
-        <div class="content">
-            <h1>Mari <br><span>Bergabung Bersama</span> <br>Kami</h1>
-            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque 
-                 expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus 
-                <br> a quae totam ipsa illum minus laudantium?</p>
-
-                <button class="cn"><a href="#">READ MORE</a></button>
-
-             </div>
-          </div>
-        </div>
-    </div>
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-    <div id="formList">
-        <div id="list">
-            <div class="item">
-                <img src="images/sd.png.png" class="avatar">
-                <div class="content">
-                    <table width="100%" cellspacing="0">
-                        <tr>
-                            <td>Materi SD</td>
-                        </tr>
-                        <tr>
-                            <td>Introduction Basic English Vocabullary</td>
-                        </tr>
-                        <tr>
-                            <td>Basic English Concepts</td>
-                        </tr>
-                       
-                    </table>
-                </div>
-            </div>
-            <div class="item">
-                <img src="images/smp.png.png" class="avatar">
-                <div class="content">
-                    <table width="100%" cellspacing="0">
-                        <tr>
-                            <td>Materi SMP</td>
-                        </tr>
-                        <tr>
-                            <td>Present</td>
-                        </tr>
-                        <tr>
-                            <td>Asking and Giving Atention </td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="item">
-                <img src="images/sma.png.png" class="avatar">
-                <div class="content">
-                    <table width="100%" cellspacing="0">
-                        <tr>
-                            <td>Materi SMA</td>
-                        </tr>
-                        <tr>
-                            <td>Recount Text</td>
-                        </tr>
-                        <tr>
-                            <td>Narrative Text</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="item">
-                <img src="images/Ellipse 1.png" class="avatar">
-                <div class="content">
-                    <table width="100%" cellspacing="0">
-                        <tr>
-                            <td>Testimoni</td>
-                        </tr>
-                        <tr>
-                            <td>Nama</td>
-                        </tr>
-                        <tr>
-                            <td>Kelas</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="item">
-                <img src="images/Ellipse 3.png" class="avatar">
-                <div class="content">
-                    <table width="100%" cellspacing="0">
-                        <tr>
-                            <td>Testimoni</td>
-                        </tr>
-                        <tr>
-                            <td>Nama</td>
-                        </tr>
-                        <tr>
-                            <td>Kelas</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-         </table>
-    </div>
+<header>
+  <h1>ENGLISH GALAXY</h1>
+</header>
+<div class="maincontainer">
+    <h1>The Boy and the Heron review: Miyazaki's 'last' film is a masterpiece</h1>
+  <div class="center-image">
+    <img src="images/gambar2.jpg.png" alt="png" width="370px">
+  </div>
+    <p> yao Miyazaki is one of the great masters of cinema, whose work happens to be animated, in hand-drawn films of exquisite delicacy and beauty. The Boy and the Heron, the 82-year-old Miyazaki's first film in a decade, amounts to a summing up of many strands of his long career, with a magical castle, forays into the spirit world and the weighty reality of World War Two. Told through the eyes of a boy named Mahito, whose journey takes him from a bombing in wartime Tokyo to a land where he is menaced by pink parakeets bigger than he is, this may be Miyazaki's most expansive and magisterial film. If it is not the most instantly stunning, that might be because he takes the time to deliver worlds within worlds, layers under layers, to create an overwhelming experience by the end.</p>
+    <p>The film starts with the sound of a siren and an explosive scene. During World War Two, the hospital where Mahito's mother works catches fire, red-orange flames filling the night sky. Mahito races through the street toward her, embers flying around him, but the hospital collapses and she dies. A year later he and his father move to the country, where his father continues working for a company that makes wartime planes for Japan, just like the hero of Miyazaki's last film, The Wind Rises, (2013) and the director's own father. And his father has married Natsuko, the younger sister of Mahito's mother. The loneliness we see on the boy's face there is unmistakable, another sign of how brilliantly Miyazaki brings to life characters who visually exist in bold outlines. You cannot dismiss them as cartoons.</p>
+    <p>The pace of all this never slows, and there is too much coming at Mahito for anyone to absorb in a single viewing. It might seem that Miyazaki is putting in everything he can while he can. After all, 10 years ago he declared The Wind Rises to be his final film. Now it has become commonplace to call The Boy and the Heron his final film. I don't know about that. He is such a magician, he might just go on and on.</p>
 </div>
-</div>
-    </div>
-    <div class="direction">
-        <button id="prev"> < </button>
-        <button id="next"> > </button>
-    </div>
-    <script src="script.js">
-        document.getElementById('next').onclick = function(){
-    const widthItem = document.querySelector('.item').offsetWidth;
-    document.getElementById('formList').scrollLeft += widthItem;
-}
-    </script>
 
-<footer class="footer">
-    <div class="footer-content">
-        <h1>ENGLISH GALAXY</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
-        <h1>FQ</h1>
-        <img src="images/Circled Envelope.png" alt="Envelope Icon">
-        <img src="images/Instagram Circle.png" alt="Instagram Icon">
-        <img src="images/WhatsApp.png" alt="WhatsApp Icon">
-    </div>
+<footer>
+  <p>&copy; 2023 English Galaxy</p>
 </footer>
-</body>
-</html>
+
 </body>
 </html>
