--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Review: The Boy and the Heron</title>
-  <link rel="stylesheet" type="text/css" href="reset.css">
- <link rel="stylesheet" type="text/css" href="main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-
-<header>
-  <h1>ENGLISH GALAXY</h1>
-</header>
-<div class="maincontainer">
-    <h1>The Boy and the Heron review: Miyazaki's 'last' film is a masterpiece</h1>
-  <div class="center-image">
-    <img src="images/gambar2.jpg.png" alt="png" width="370px">
-  </div>
-    <p> yao Miyazaki is one of the great masters of cinema, whose work happens to be animated, in hand-drawn films of exquisite delicacy and beauty. The Boy and the Heron, the 82-year-old Miyazaki's first film in a decade, amounts to a summing up of many strands of his long career, with a magical castle, forays into the spirit world and the weighty reality of World War Two. Told through the eyes of a boy named Mahito, whose journey takes him from a bombing in wartime Tokyo to a land where he is menaced by pink parakeets bigger than he is, this may be Miyazaki's most expansive and magisterial film. If it is not the most instantly stunning, that might be because he takes the time to deliver worlds within worlds, layers under layers, to create an overwhelming experience by the end.</p>
-    <p>The film starts with the sound of a siren and an explosive scene. During World War Two, the hospital where Mahito's mother works catches fire, red-orange flames filling the night sky. Mahito races through the street toward her, embers flying around him, but the hospital collapses and she dies. A year later he and his father move to the country, where his father continues working for a company that makes wartime planes for Japan, just like the hero of Miyazaki's last film, The Wind Rises, (2013) and the director's own father. And his father has married Natsuko, the younger sister of Mahito's mother. The loneliness we see on the boy's face there is unmistakable, another sign of how brilliantly Miyazaki brings to life characters who visually exist in bold outlines. You cannot dismiss them as cartoons.</p>
-    <p>The pace of all this never slows, and there is too much coming at Mahito for anyone to absorb in a single viewing. It might seem that Miyazaki is putting in everything he can while he can. After all, 10 years ago he declared The Wind Rises to be his final film. Now it has become commonplace to call The Boy and the Heron his final film. I don't know about that. He is such a magician, he might just go on and on.</p>
-</div>
-
-<footer>
-  <p>&copy; 2023 English Galaxy</p>
-</footer>
-
+    <header>
+        <h1>ENGLISH GALAXY</h1>
+      </header>
+      <div class="maincontainer">
+          <h1>Taylor Swift's 1989: The return of a pop music masterpiece</h1>
+        <div class="center-image">
+          <img src="image/gambar1.png" alt="png" width="370px">
+        </div>
+          <p>On Wednesday, Taylor Swift announced that the re-recorded version of her 2014 album 1989 was set to be released in October. Since 2021, pop music fans have been excitedly consuming these re-recorded albums, dubbed "Taylor's versions", which have been streamed more than 1 billion times – far outstripping the originals.</p>
+          <p>n 2019, music executive Scooter Braun acquired Swift's previous record label Big Machine, taking ownership of her back catalogue before selling the Master tapes to an investment fund for a reported $300m. Embroiled for several years in a subsequent dispute, Swift decided to take back control by embarking on the project to re-record her entire back catalogue. Having worked through 2008's Fearless and 2010's Speak Now, and with the release in 2022 of 2012's Red, her fans are revisiting this integral moment of Taylor Swift's career – which saw the emergence of her "pop era", and the reinvention of herself</p>
+          <p>he album's message is one of hope, of making something beautiful out of something difficult. In her 1995 book, She Bop: the definitive history of women in popular music, Dr Lucy O'Brien writes that in pop: "there is the impression of both embattled strength and fragility. It is in Dusty Springfield's taut notes, Chrissie Hynde's jangling rock guitar, Amy Winehouse's bluesy contralto." And it is in Taylor Swift's 1989. </p>
+          <p>With the release of the album, Swift gained – alongside a legion of new fans – a newfound respect from the wider music industry. She began to be referred to as an "auteur" rather than an artist, and the music publications that had previously ignored her started to pay attention. The alt-country musician Ryan Adams recorded an entire album of 1989 covers (met by some with a less-than-rapturous reception), and she became a permanent collaborator with Pitchfork darlings like Bon Iver's Justin Vernon and The National's Aaron Dessner.</p>
+      </div>
+      
+      <footer>
+        <p>&copy; 2023 English Galaxy</p>
 </body>
 </html>
