--- a/index.html
+++ b/index.html
@@ -8,21 +8,159 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <header>
-        <h1>ENGLISH GALAXY</h1>
-      </header>
-      <div class="maincontainer">
-          <h1>Taylor Swift's 1989: The return of a pop music masterpiece</h1>
-        <div class="center-image">
-          <img src="image/gambar1.png" alt="png" width="370px">
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Webpage Design</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+
+    <div class="main">
+        <div class="navbar">
+            <div class="icon">
+                <h2 class="logo">ENGLISH GALAXY</h2>
+            </div>
+
+            <div class="menu">
+                <ul>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">ABOUTUS</a></li>
+                    <li><a href="#">CATEGORY</a></li>
+                    <li><a href="#">CARIER</a></li>
+                </ul>
+            </div>
+
+            <div class="search">
+                <input class="srch" type="search" name="" placeholder="Type To text">
+                <a href="#"> <button class="btn">Search</button></a>
+            </div>
+
+        </div> 
+        <div class="content">
+            <h1>Mari <br><span>Bergabung Bersama</span> <br>Kami</h1>
+            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque 
+                 expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus 
+                <br> a quae totam ipsa illum minus laudantium?</p>
+
+                <button class="cn"><a href="#">READ MORE</a></button>
+
+             </div>
+          </div>
         </div>
-          <p>On Wednesday, Taylor Swift announced that the re-recorded version of her 2014 album 1989 was set to be released in October. Since 2021, pop music fans have been excitedly consuming these re-recorded albums, dubbed "Taylor's versions", which have been streamed more than 1 billion times – far outstripping the originals.</p>
-          <p>n 2019, music executive Scooter Braun acquired Swift's previous record label Big Machine, taking ownership of her back catalogue before selling the Master tapes to an investment fund for a reported $300m. Embroiled for several years in a subsequent dispute, Swift decided to take back control by embarking on the project to re-record her entire back catalogue. Having worked through 2008's Fearless and 2010's Speak Now, and with the release in 2022 of 2012's Red, her fans are revisiting this integral moment of Taylor Swift's career – which saw the emergence of her "pop era", and the reinvention of herself</p>
-          <p>he album's message is one of hope, of making something beautiful out of something difficult. In her 1995 book, She Bop: the definitive history of women in popular music, Dr Lucy O'Brien writes that in pop: "there is the impression of both embattled strength and fragility. It is in Dusty Springfield's taut notes, Chrissie Hynde's jangling rock guitar, Amy Winehouse's bluesy contralto." And it is in Taylor Swift's 1989. </p>
-          <p>With the release of the album, Swift gained – alongside a legion of new fans – a newfound respect from the wider music industry. She began to be referred to as an "auteur" rather than an artist, and the music publications that had previously ignored her started to pay attention. The alt-country musician Ryan Adams recorded an entire album of 1989 covers (met by some with a less-than-rapturous reception), and she became a permanent collaborator with Pitchfork darlings like Bon Iver's Justin Vernon and The National's Aaron Dessner.</p>
-      </div>
-      
-      <footer>
-        <p>&copy; 2023 English Galaxy</p>
+    </div>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <div id="formList">
+        <div id="list">
+            <div class="item">
+                <img src="images/sd.png.png" class="avatar">
+                <div class="content">
+                    <table width="100%" cellspacing="0">
+                        <tr>
+                            <td>Materi SD</td>
+                        </tr>
+                        <tr>
+                            <td>Introduction Basic English Vocabullary</td>
+                        </tr>
+                        <tr>
+                            <td>Basic English Concepts</td>
+                        </tr>
+                       
+                    </table>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/smp.png.png" class="avatar">
+                <div class="content">
+                    <table width="100%" cellspacing="0">
+                        <tr>
+                            <td>Materi SMP</td>
+                        </tr>
+                        <tr>
+                            <td>Present</td>
+                        </tr>
+                        <tr>
+                            <td>Asking and Giving Atention </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/sma.png.png" class="avatar">
+                <div class="content">
+                    <table width="100%" cellspacing="0">
+                        <tr>
+                            <td>Materi SMA</td>
+                        </tr>
+                        <tr>
+                            <td>Recount Text</td>
+                        </tr>
+                        <tr>
+                            <td>Narrative Text</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/Ellipse 1.png" class="avatar">
+                <div class="content">
+                    <table width="100%" cellspacing="0">
+                        <tr>
+                            <td>Testimoni</td>
+                        </tr>
+                        <tr>
+                            <td>Nama</td>
+                        </tr>
+                        <tr>
+                            <td>Kelas</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/Ellipse 3.png" class="avatar">
+                <div class="content">
+                    <table width="100%" cellspacing="0">
+                        <tr>
+                            <td>Testimoni</td>
+                        </tr>
+                        <tr>
+                            <td>Nama</td>
+                        </tr>
+                        <tr>
+                            <td>Kelas</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+         </table>
+    </div>
+</div>
+</div>
+    </div>
+    <div class="direction">
+        <button id="prev"> < </button>
+        <button id="next"> > </button>
+    </div>
+    <script src="script.js">
+        document.getElementById('next').onclick = function(){
+    const widthItem = document.querySelector('.item').offsetWidth;
+    document.getElementById('formList').scrollLeft += widthItem;
+}
+    </script>
+
+<footer class="footer">
+    <div class="footer-content">
+        <h1>ENGLISH GALAXY</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
+        <h1>FQ</h1>
+        <img src="images/Circled Envelope.png" alt="Envelope Icon">
+        <img src="images/Instagram Circle.png" alt="Instagram Icon">
+        <img src="images/WhatsApp.png" alt="WhatsApp Icon">
+    </div>
+</footer>
+</body>
+</html>
 </body>
 </html>
