--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="maincontainer">
           <h1>Taylor Swift's 1989: The return of a pop music masterpiece</h1>
         <div class="center-image">
-          <img src="image/gambar1.png" alt="png" width="370px">
+          <img src="img/gambar1.png" alt="png" width="370px">
         </div>
           <p>On Wednesday, Taylor Swift announced that the re-recorded version of her 2014 album 1989 was set to be released in October. Since 2021, pop music fans have been excitedly consuming these re-recorded albums, dubbed "Taylor's versions", which have been streamed more than 1 billion times – far outstripping the originals.</p>
           <p>n 2019, music executive Scooter Braun acquired Swift's previous record label Big Machine, taking ownership of her back catalogue before selling the Master tapes to an investment fund for a reported $300m. Embroiled for several years in a subsequent dispute, Swift decided to take back control by embarking on the project to re-record her entire back catalogue. Having worked through 2008's Fearless and 2010's Speak Now, and with the release in 2022 of 2012's Red, her fans are revisiting this integral moment of Taylor Swift's career – which saw the emergence of her "pop era", and the reinvention of herself</p>
