--- a/registrasi.html
+++ b/registrasi.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="login">
-        <img src="profil.png"  class="avatar">
+        <img src="img/profil.png"  class="avatar">
         <h1>Registrasi</h1>
         <form>
             <div class="input-group"><input type="text" placeholder="Nama" name="nama"></div>
