--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
     <title>Webpage Design</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -44,7 +54,7 @@
     <div id="formList">
         <div id="list">
             <div class="item">
-                <img src="img/sd.png" class="avatar">
+                <img src="images/sd.png.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
@@ -61,7 +71,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="imag/smp.png" class="avatar">
+                <img src="images/smp.png.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
@@ -77,7 +87,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="img/sma.png" class="avatar">
+                <img src="images/sma.png.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
@@ -93,7 +103,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="img/Ellipse 1.png" class="avatar">
+                <img src="images/Ellipse 1.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
@@ -109,7 +119,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="img/Ellipse 3.png" class="avatar">
+                <img src="images/Ellipse 3.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
@@ -145,9 +155,9 @@
         <h1>ENGLISH GALAXY</h1>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
         <h1>FQ</h1>
-        <img src="img/Circled Envelope.png" alt="Envelope Icon">
-        <img src="img/Instagram Circle.png" alt="Instagram Icon">
-        <img src="img/WhatsApp.png" alt="WhatsApp Icon">
+        <img src="images/Circled Envelope.png" alt="Envelope Icon">
+        <img src="images/Instagram Circle.png" alt="Instagram Icon">
+        <img src="images/WhatsApp.png" alt="WhatsApp Icon">
     </div>
 </footer>
 </body>
