--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
-                            <td>Materi SD</td>
+                            <td>SD</td>
                         </tr>
                         <tr>
                             <td>Introduction Basic English Vocabullary</td>
@@ -71,11 +71,11 @@
                 </div>
             </div>
             <div class="item">
-                <img src="images/smp.png.png" class="avatar">
+                <img src="img/smp.png.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
-                            <td>Materi SMP</td>
+                            <td>SMP</td>
                         </tr>
                         <tr>
                             <td>Present</td>
@@ -87,11 +87,11 @@
                 </div>
             </div>
             <div class="item">
-                <img src="images/sma.png.png" class="avatar">
+                <img src="img/sma.png.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
-                            <td>Materi SMA</td>
+                            <td>SMA</td>
                         </tr>
                         <tr>
                             <td>Recount Text</td>
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="images/Ellipse 1.png" class="avatar">
+                <img src="img/Ellipse 1.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
