perubahan di body

--- a/category_sd1.html
+++ b/category_sd1.html
@@ -6,10 +6,14 @@
     <title>Category</title>
 </head>
 <style>
-         body{
-            background-color: #122A46;
-            color: white;
-        }
+    body {
+    background:linear-gradient(to top,#0f3462,#09203d, #07182d);
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    width: 100%;
+    color: white;
+}
 /* Galaxy header style */
 .galaxy-header {
     background-color:#233954;
@@ -158,6 +162,7 @@
         .content{
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             text-align:justify;
+            padding-left: 20px;
         }
         /*footer*/
 
