--- a/tips&trick.html
+++ b/tips&trick.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tips&Trick</title>
     <style>
-         body{
-            background-color: #122A46;
-            color: white;
-        }
+        body {
+        background:linear-gradient(to top,#0f3462,#09203d, #07182d);
+        margin: 0;
+        padding: 0;
+        font-family: 'Montserrat', sans-serif;
+        width: 100%;
+        color: white;
+    }
         .galaxy-header {
     background-color:#233954;
     color: white;
@@ -132,7 +136,6 @@
 	color:#f7941d;
 }
         .judul{
-            font-family:Cambria, Cochin, Georgia;
             font-size: 22px;
             font-weight: bold;
             
