--- a/blog.html
+++ b/blog.html
@@ -6,10 +6,14 @@
     <title>Blog</title>
 </head>
 <style>
-    body{
-            background-color: #122A46;
-            color: white;
-        }
+    body {
+        background:linear-gradient(to top,#0f3462,#09203d, #07182d);
+        margin: 0;
+        padding: 0;
+        font-family: 'Montserrat', sans-serif;
+        width: 100%;
+        color: white;
+    }
         .galaxy-header {
     background-color:#233954;
     color: white;
@@ -186,7 +190,7 @@ main{
             font-weight:bold;
             font-family: Arial, Helvetica, sans-serif;
             position:absolute;
-            top: 435px;
+            top: 520px;
             left: 29px;
             font-size: 22px;
             color: #fff;
@@ -196,7 +200,7 @@ main{
             font-weight:bold;
             font-family: Arial, Helvetica, sans-serif;
             position:absolute;
-            top: 240px;
+            top: 320px;
             left: 420px;
             font-size: 18px;
             color: #fff;
@@ -206,7 +210,7 @@ main{
             font-weight:bold;
             font-family: Arial, Helvetica, sans-serif;
             position:absolute;
-            top: 450px;
+            top: 530px;
             left: 420px;
             font-size: 18px;
             color: #fff;
