--- a/tips&trick2.html
+++ b/tips&trick2.html
@@ -6,10 +6,14 @@
     <title>Tips&Trick2</title>
 </head>
 <style>
-     body{
-            background-color: #122A46;
-            color: white;
-        }
+     body {
+        background:linear-gradient(to top,#0f3462,#09203d, #07182d);
+        margin: 0;
+        padding: 0;
+        font-family: 'Montserrat', sans-serif;
+        width: 100%;
+        color: white;
+    }
         .galaxy-header {
     background-color:#233954;
     color: white;
@@ -146,6 +150,7 @@
         .left_content {
             font-family: cursive;
             text-align: justify;
+            padding-left: 20px;
         }
         .right_content{
             font-family: cursive;
@@ -155,6 +160,12 @@
         }
         h2{
             text-shadow: 3px 3px blue;
+        }
+        .left_content p{
+            padding-right: 20px;
+        }
+        .right_content p{
+            padding-left: 20px;
         }
         .footer-first {
 	display: flex;
@@ -255,7 +266,7 @@
             </div>
         </div>
     </header>
-    <div class="judul">Tips & rick</div>
+    <div class="judul">Tips & Trick</div>
     <h2>Immerse Yourself: Surround Yourself with English Media - Movies, Music, Books.</h2>
     <div class="left_content">
         <p ><img src="img/g3.jpeg" style="float:left;"/>Selecting English-language movies and TV series is a valuable language-learning strategy. Begin by using subtitles in your native language to grasp the storyline and context. Gradually transition to English subtitles to improve listening skills, focusing on pronunciation and intonation. Finally, challenge yourself by watching without any subtitles to enhance your overall language comprehension. This step-by-step approach will help you become more confident and proficient in English while enjoying your favorite entertainment.</p>
@@ -264,7 +275,7 @@
         <p style="text-align:justify";><img src="img/g31.jpeg" style="float:right;"/>Listening to English songs and paying close attention to the lyrics is a fun and effective way to improve your language skills. Singing along not only helps with pronunciation and rhythm but also enhances your ability to hear and reproduce the correct intonation. Additionally, if you're curious about the song's meaning, you can look up the lyrics and their interpretations to gain a deeper understanding of the context and cultural references within the music. This combination of music and language learning can make the process more engaging and memorable.</p>
     </div>
     <div class="left_content">
-        <p ><img src="img/g32.jpeg" style="float:left;"/>Starting with books or articles that align with your current English proficiency level is a smart approach to language improvement. As you become more comfortable with the language, gradually seek out more challenging texts to expand your vocabulary and comprehension skills. It's essential to keep a dictionary or a language reference tool readily available while reading. This allows you to quickly look up unfamiliar words, understand their meanings, and reinforce your understanding of the text.</p>
+        <p ><img src="img/g32.jpeg" style="float:left;"/>Starting with books or articles that align with your current English proficiency level is a smart approach to language improvement. As you become more comfortable with the language, gradually seek out more challenging texts to expand your vocabulary and comprehension skills. It's essential to keep a dictionary or a language reference tool readily available while reading. This allows you to quickly look up unfamiliar words, understand their meanings, and reinforce your understanding of the text.<br><br></p>
     </div>
     <footer class="galaxy-footer">
         <div class="footer-first">
