--- a/tips&trick4.html
+++ b/tips&trick4.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tips&Trick4</title>
     <style>
-        body{
-            background-color: #122A46;
-            color: white;
-        }
+        body {
+        background:linear-gradient(to top,#0f3462,#09203d, #07182d);
+        margin: 0;
+        padding: 0;
+        font-family: 'Montserrat', sans-serif;
+        width: 100%;
+        color: white;
+    }
         .galaxy-header {
     background-color:#233954;
     color: white;
@@ -145,6 +149,7 @@
         }
     
         .column {
+            padding-left: 20px;
             float:left;
             width: 40%;
         }
@@ -165,6 +170,7 @@
         .content p{
             text-align: justify;
             background-color:#808080;
+            padding: 10px;
         }
         .footer-first {
 	display: flex;
