--- a/tips&trick5.html
+++ b/tips&trick5.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tips&Trick5</title>
     <style>
-         body{
-            background-color: #122A46;
-            color: white;
-        }
+        body {
+        background:linear-gradient(to top,#0f3462,#09203d, #07182d);
+        margin: 0;
+        padding: 0;
+        font-family: 'Montserrat', sans-serif;
+        width: 100%;
+        color: white;
+    }
         .galaxy-header {
     background-color:#233954;
     color: white;
@@ -151,6 +155,7 @@
     }
     p{
         font-family:cursive;
+        text-align: justify;
     }
     .content{
         font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -160,6 +165,7 @@
     .content p{
         text-align: justify;
         background-color:#808080;
+        padding: 10px;
     }
     .footer-first {
 	display: flex;
