--- a/tips&trick1.html
+++ b/tips&trick1.html
@@ -281,18 +281,18 @@
         <tr>
             <td>1</td>
             <td>Set Clear Goals
-                Define your language learning goals. Are you aiming to improve conversational skills, pass an English proficiency exam, or simply enhance your language abilities? </td>
+                Define your language learning goals. Are you aiming to improve conversational skills, pass an English proficiency exam, or simply enhance your language abilities? <br>Remember that language learning is a journey, and progress may not always be linear. Stay patient, stay motivated, and enjoy the process of improving your English language skills. </td>
         </tr>
         <tr>
             <td>2</td>
             <td>Allocate Time
                 Find a time slot in your daily schedule that works best for you. Consistency is easier when you allocate a specific time each day.
-                Track Your Progress</td>
+                Track Your Progress. <br>By allocating dedicated time and tracking your progress, you'll have a structured approach to help you stay motivated and on track towards achieving your language learning goals.</td>
         </tr>
         <tr>
             <td>3</td>
             <td>Track Your Progress
-                Keep a journal or use language learning apps to track your daily progress. Monitoring your advancement can be motivating.</td>
+                Keep a journal or use language learning apps to track your daily progress. Monitoring your advancement can be motivating.<br>With diligent monitoring and consistent effort, you'll be well on your way to achieving your language learning goals.</td>
         </tr>
     </table>
     <footer class="galaxy-footer">
