--- a/career.html
+++ b/career.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>English Galaxy</title>
     <link rel="stylesheet" href="career.css" />
-    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <!-- <header class="galaxy-header">
+    <header class="galaxy-header">
       <div class="header-content">
         <div class="left-section">
           <div class="logo">
@@ -42,25 +42,68 @@
           <button class="sign-in-button">Login/Sign In</button>
         </div>
       </div>
-    </header> -->
+    </header>
 
     <main>
-      <section>
-        <div class="col-9">
-          <div class="contentKiri">
-            <span>Career</span>
-            <h1>Why English language skills <br> important for your future?</h1>
+      <!-- title -->
+      <div class="col-12">
+        <div class="titleContent">
+          <h2>
+            Why <span>English language </span>skills <br />
+            important for your future?
+          </h2>
+        </div>
+      </div>
+      <!-- end title -->
+
+      <!-- content card -->
+      <div class="col-6 right">
+        <div class="card">
+          <div class="imgWrap"><img src="img/fotocard1.svg" id="foto1""></div>
+          <div class="text">
+            <p class="center" id="text">Connection</p>
+            <p id="text2">
+              <span class="warnatext">English</span> can certainly broaden your
+              social network undoubtedly. You can easily make new friends around
+              the globe if you know English.
+            </p>
           </div>
         </div>
-        <div class="col-3">
-          <div class="contentKanan">
-            <img src="img/bubble with a question.png" alt="" />
+      </div>
+
+      <!-- content card2 -->
+      <div class="col-6 left">
+        <div class="card">
+          <div class="imgWrap"><img src="img/fotocard2.svg" id="foto1""></div>
+          <div class="text">
+            <p class="center" id="text">More Opportunities</p>
+            <p id="text2">
+              Good <span class="warnatext">English</span> language skills will fetch you more opportunities to
+              study abroad at top universities. A wide range of schools around
+              the world offer classes in English.
+            </p>
           </div>
         </div>
-      </section>
+      </div>
+
+      <!-- content card3 -->
+      <div class="col-12 center">
+        <div class="card">
+          <div class="imgWrap"><img src="img/fotocard3.svg" id="foto1""></div>
+          <div class="text">
+            <p class="center" id="text">Work Prospects</p>
+            <p id="text2">
+              Proficient language can change your entire future by opening new
+              career opportunities. It can benefit you if you are working in a
+              multinational organization.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- end content card -->
     </main>
 
-    <!-- <footer class="galaxy-footer">
+    <footer class="galaxy-footer">
       <div class="footer-first">
         <div class="left-column">
           <div class="footer-column about-us-footer">
@@ -102,6 +145,6 @@
       <div class="footer-second">
         <p>&copy; 2023 English Galaxy. All Rights Reserved.</p>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
