--- a/category_sd.html
+++ b/category_sd.html
@@ -138,6 +138,11 @@
 	color:#f7941d;
 }
 
+.next{
+   text-align: right;
+   padding: 0 25px;
+}
+
 /*footer*/
 
 .footer-first {
@@ -302,6 +307,10 @@
             &#8226 Friday<br>
             &#8226 Saturday
         </p>
+        </div>
+        <div class="next">
+            Next
+        </div>
     </div>
     <footer class="galaxy-footer">
         <div class="footer-first">
