--- a/category_sd1.html
+++ b/category_sd1.html
@@ -164,7 +164,22 @@
             text-align:justify;
             padding-left: 20px;
         }
-        /*footer*/
+/*click back and next*/
+.change-page{
+display: flex;
+justify-content: space-around;
+padding: 0 25px;
+}
+
+#previous-btn{
+text-align: left;
+}
+
+#next-btn{
+text-align: right;
+}
+
+/*footer*/
 
 .footer-first {
 	display: flex;
@@ -285,6 +300,11 @@
         <h2>Part of Body</h2>
         <p> body parts, namely the introduction of body parts to children taught using English and how to read them.</p>
     </div>
+    <div class="change-page">
+        <a href=# id="previous-btn">Previous </a>
+        <a href=# id="next-btn">Next</a>
+        </div>
+        
     <footer class="galaxy-footer">
         <div class="footer-first">
         <div class="left-column">
