--- a/category_sma.html
+++ b/category_sma.html
@@ -165,8 +165,12 @@
         .content p{
             padding-left: 20px;
         }
-               /*footer*/
-
+/*click back and next*/
+.next{
+   text-align: right;
+   padding: 0 25px;
+}
+/*footer*/
 .footer-first {
 	display: flex;
   	flex-wrap: wrap;
@@ -287,6 +291,9 @@
            3. Imaginative<br>Similar to what was previously discussed, imaginative recount text closely resembles narrative text. However, the distinction lies in the fact that imaginative recount text recounts imaginative experiences, such as dreams.
         </p>
     </div>
+    <div class="next">
+        Next
+   </div>
     <footer class="galaxy-footer">
         <div class="footer-first">
         <div class="left-column">
