--- a/categorysma1.html
+++ b/categorysma1.html
@@ -164,7 +164,21 @@
         .content p{
             padding-left: 20px;
         }
-        .footer-first {
+
+/*click back and next*/
+.previous {
+   position: relative;
+   text-align: left;
+   padding: 0 25px;
+   top : 16px;
+}
+.next{
+   text-align: right;
+   padding: 0 25px;
+}
+
+ /*footer*/    
+.footer-first {
 	display: flex;
   	flex-wrap: wrap;
 	justify-content: center;
@@ -280,6 +294,12 @@
             3. Conflict/Inciting Incident<br>The narrative introduces the central conflict or inciting incident when Ella decides to explore the enchanted forest on her own. This decision sets the story in motion.<br>
             4. Character Development<br>As Ella ventures into the forest, the narrative provides insight into her character, describing her emotions, thoughts, and reactions to the forest's beauty and mysteries.
         </p>
+    </div>
+    <div class="previous">
+        Previous
+    </div>
+    <div class="next">
+        Next
     </div>
     <footer class="galaxy-footer">
         <div class="footer-first">
