--- a/category_smp.html
+++ b/category_smp.html
@@ -165,7 +165,14 @@
         .content p{
             padding-left: 20px;
         }
-        .footer-first {
+/*click back and next*/
+.next{
+   text-align: right;
+   padding: 0 25px;
+}
+
+/*footer*/
+    .footer-first {
 	display: flex;
   	flex-wrap: wrap;
 	justify-content: center;
@@ -287,6 +294,9 @@
             &#8226 Describes actions or events that are currently ongoing in the present.<br>
             &#8226 Formed using "am" (for the first person singular), "is" (for the third person singular), "are" (for plural subjects) + the base form of the verb + "-ing."
         </p>
+    <div class="next">
+         Next
+    </div>
     </div>
     <footer class="galaxy-footer">
         <div class="footer-first">
