--- a/registrasi.html
+++ b/registrasi.html
@@ -6,10 +6,9 @@
     <title>Register</title>
     <style>
         body{
-    font-family: 'Montserrat', sans-serif;
-    width: 100%;
-    background-color: #233954;
-    color: white;
+        background-image: url(img/bgimage.png);
+        background-size: cover;
+        background-repeat: no-repeat;  
 }
 
 .login{
@@ -77,7 +76,7 @@ h1 {
 
 .btn:hover {
     cursor: pointer;
-    background: blue;
+    background: #ff4500
 }
 
 .login a{
