--- a/FAQ.html
+++ b/FAQ.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="reset.css">
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="FAQ.css">
 </head>
 <body>
     <header class="galaxy-header">
@@ -106,6 +106,7 @@
                 </ul>
             </div>
         </div>
+        
         <footer class="galaxy-footer">
             <div class="footer-first">
                <div class="left-column">
