--- a/blog.html
+++ b/blog.html
@@ -4,287 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<style>
-    body {
-        background:linear-gradient(to top,#0f3462,#09203d, #07182d);
-        margin: 0;
-        padding: 0;
-        font-family: 'Montserrat', sans-serif;
-        width: 100%;
-        color: white;
-    }
-        .galaxy-header {
-    background-color:#233954;
-    color: white;
-    text-align: center;
-}
 
-.header-content {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center;
-}
-
-.left-section {
-    display: flex; 
-    align-items: center;
-}
-
-/* Logo styles */
-.logo img {
-	float: left;
-    max-width: 75px; 
-	margin-right: 60px;
-	margin-left: 18px;
-	padding: 5px;
-}
-
-.user-controls {
-	float: right;
-	margin-left: 42px;
-	text-align: center;
-	color: white;
-	cursor: pointer;
-	border-radius: 5px;
-	
-
-}
-
-.button:hover {
-	background-color:#f7941d;
-	color: black;
-}
-
-.navbar ul {
-    list-style: none;
-    display: flex;
-}
-
-.navbar li {
-    margin-right: 55px;
-}
-
-.navbar a {
-	padding: 10px 5px;
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    font-size: 15px;
-}
-
-.navbar a:hover {
-    color: #f7941d; 
-}
-
-.sign-in-button {
-    background-color: transparent;
-	font-weight: bold;
-    color: white;
-    border: 1px solid white;
-    border-radius: 25px;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-}
-
-.sign-in-button:hover {
-    background-color:#f7941d;
-	border: none;
-    color:black; /* Change color on hover */
-}
-
-.category-menu{
-	position: relative;
-  	display: inline-block;
-}
-
-.menu-icon {
-    font-size: 15px;
-	transition: color 0.2s ease-in-out; 
-    margin-left: 5px; 
-}
-
-.dropdown-content {
-	margin-top: 5px;
-	display: none;
-	position: absolute;
-	background-color: #f9f9f9;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-  }
-  
-.dropdown-content a {
-	color: black;
-	text-align: left;
-	font-size: 11px;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-}
-  
-.dropdown-content a:hover {
-	background-color:#f7941d;
-	color: white;
-}
-
-.category-menu:hover .dropdown-content {
-	display: block;
-}
-
-.category-menu:hover{
-	color:#f7941d;
-}
-
-main{
-	height: 1200px;
-}
-
-    .judul h1{
-        text-align: center;
-        text-decoration-line: underline;
-        color:#f7941d;
-    }
-    .judul h2{
-        padding-left: 20px;
-    }
-    .judul h3{
-        padding-left: 20px;
-    }
-        .container {
-            display: flex;
-            align-items: flex-start;
-        }
-
-        .left-image {
-            flex: 1;
-            padding: 20px;
-            padding-right: 50px;
-        }
-
-        .right-images {
-            flex: 2;
-            display: flex;
-            flex-direction: column;
-        }
-        .right-image {
-            flex: 1;
-            padding: 20px;
-        }
-
-        /* CSS untuk mengatur gambar */
-        img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-        .right-image img{
-            height: 167px;
-        }
-        .left_content p{
-            padding-left: 20px;
-            font-size: 27px;
-        }
-        .overlay {
-            font-weight:bold;
-            font-family: Arial, Helvetica, sans-serif;
-            position:absolute;
-            top: 520px;
-            left: 29px;
-            font-size: 22px;
-            color: #fff;
-            padding: 48px;
-        }
-        .overlay1 {
-            font-weight:bold;
-            font-family: Arial, Helvetica, sans-serif;
-            position:absolute;
-            top: 320px;
-            left: 420px;
-            font-size: 18px;
-            color: #fff;
-            padding: 48px;
-        }
-        .overlay2 {
-            font-weight:bold;
-            font-family: Arial, Helvetica, sans-serif;
-            position:absolute;
-            top: 530px;
-            left: 420px;
-            font-size: 18px;
-            color: #fff;
-            padding: 48px;
-        }
-        .footer-first {
-	display: flex;
-  	flex-wrap: wrap;
-	justify-content: center;
-  	align-content: flex-start;
-	background-color:#233954;
-	color: #fff;
-	padding: 30px;
-  }
-  
-  
-  .footer-column {
-	margin: 0 100px;
-  }
-  
-  .galaxy-footer h3 {
-	font-size: 18px;
-	margin-bottom: 10px;
-	color:#f7941d;
-  }
-  
-  .galaxy-footer ul {
-	list-style-type: none;
-	padding: 0;
-  }
-  
-  .galaxy-footer ul li {
-	margin-bottom: 8px;
-  }
-
-  ul li a{
-	font-size: 14px;
-  }
-  
-  .galaxy-footer ul li a {
-	text-decoration: none;
-	color: #fff;
-	transition: color 0.3s ease;
-  }
-  
-  .galaxy-footer ul li a:hover {
-	color:#aeb3ba; /* Change color on hover */
-  }
-  
-  .social-icons {
-	display: flex;
-	list-style-type: none;
-	padding: 0;
-	margin-top: 10px;
-  }
-  
-  .social-icons li {
-	margin-right: 10px;
-  }
-  
-  .social-icons a {
-	text-decoration: none;
-	color: #fff;
-	font-size: 24px;
-	transition: color 0.3s ease;
-  }
-
-  .footer-second{
-	text-align: center;
-	background-color:#0f1823;
-	color: #fff;
-	padding: 30px;
-  }
-</style>
 <body>
     <header class="galaxy-header">
         <div class="header-content">
@@ -294,89 +17,112 @@ main{
                 </div>
                 <nav class="navbar">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Tips&Trick</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li class="category-menu">
                             <a href="#">Category</a>
                             <span class="menu-icon">&#9776;</span>
                             <div class="dropdown-content">
-                                <a href="#">Sekolah Dasar(SD)</a>
-                                <a href="#">Sekolah Menengah Pertama(SMP)</a>
-                                <a href="#">Sekolah Menengah Akhir(SMA)</a>
+                                <a href="category_sd1.html">Sekolah Dasar(SD)</a>
+                                <a href="category_smp1.html">Sekolah Menengah Pertama(SMP)</a>
+                                <a href="category_sma1.html">Sekolah Menengah Akhir(SMA)</a>
                             </div>
-                        </li>        
-                        <li><a href="#">About Us</a></li>               
-                        <li><a href="#">Career</a></li>
-                        <li><a href="#">Blog</a></li>
+                        </li>                        
+                        <li><a href="career.html">Career</a></li>
+                        <li><a href="tips&trick.html">Tips & Trick</a></li>
                     </ul>
-                </nav>
-                <div class="user-controls">
-                    <button class="sign-in-button">Login/Sign In</button>
-                </div>
+                </nav>            
             </div>
+           <div class="user-controls">
+                <a href="login.html">
+                    <button class="sign-in-button">Login/Sign In</button>
+                </a>
+           </div>
         </div>
     </header>
+
+    <div class="main-blog">
     <div class="judul">
-        <h1>English Galaxy</h1>
+        <h1>Blog</h1>
         <h2>Improve your skill by Reading</h2>
-        <h3>Trending</h3>
+        <h3>TRENDING</h3>
     </div>
-    <div class="container">
-        <div class="left-image">
-            <div class="overlay">From The Starry Night to<br> a wheatfield: Van Gogh's <br>darkest symbol</div>
-            <img src="img/blog1.png" alt="Gambar 1">
-            
+    <div class="top-section">
+        <div class="left-section">
+            <div class="caption">From The Starry Night to a wheatfield: Van Gogh's darkest symbol</div>
+            <img src="img/blog1.png" alt="Gambar 1">  
         </div>
-        <div class="right-images">
+        <div class="right-section">
             <div class="right-image">
-                <div class="overlay1">The Beatles' 'final' record: <br> Should we bring singers back <br>from the dead?</div>
+                <div class="caption">The Beatles' 'final' record: Should we bring singers back from the dead?</div>
                 <img src="img/blog2.png" alt="Gambar 2">
             </div>
             <div class="right-image">
-                <div class="overlay2">The Boy and the Heron review:<br>Miyazaki's 'last' film is a <br>masterpiece</div>
+                <div class="caption">The Boy and the Heron review: Miyazaki's 'last' film is a masterpiece</div>
                 <img src="img/blog3.png" alt="Gambar 3">
             </div>
         </div>
     </div>
+
     <div class="judul">
-        <h3>Latest Post</h3>
+        <h3>LATEST POST</h3>
     </div>
-    <div class="left_content">
-        <p ><img src="img/blog4.png" style="float:left" width="400px" height="200px";/><strong>Boy and the Heron review: Miyazaki's 'last' film is a masterpiece <br>In the way of fairy tales, Miyazaki asserts an emotional pull through fantastical events</strong> <br><br><br>By Caryn James
-            8th September 2023</p>
+
+    <div class="bottom-section">
+        <a href="artikel1.html">
+        <div class="blog-content">
+            <img class="blog-image" src="img/blog4.png">
+            <div class="blog-description">
+                <h3 class="blog-caption">Boy and the Heron review: Miyazaki's 'last' film is a masterpiece. In the way of fairy tales, Miyazaki asserts an emotional pull through fantastical events</h3>
+                <p class="blog-author"> by Caryn James </p>
+                <p class="blog-date">8th September 2023</p>
+            </div>
+        </div>
+        </a>
+
+        <a href="artikel2.html">
+        <div class="blog-content">
+            <img class="blog-image" src="img/blog5.png">
+            <div class="blog-description">
+                <h3 class="blog-caption">Swift's 1989: The return of a pop music masterpiece. There is the impression of both embattled strength and fragility. It is in Dusty Springfield's taut notes, Chrissie Hynde's jangling rock guitar, Amy Winehouse's bluesy contralto</h3>
+                <p class="blog-author"> By Rob Freeman</p>
+                <p class="blog-date"></p>12th August 2023</p>
+            </div>
+        </div>
+        </a>
     </div>
-    <div class="left_content">
-        <p ><img src="img/blog5.png" style="float:left" width="400px" height="200px";/><strong>Swift's 1989: The return of a pop music masterpiece <br> There is the impression of both embattled strength and fragility. It is in Dusty Springfield's taut notes, Chrissie Hynde's jangling rock guitar, Amy Winehouse's bluesy contralto</strong> <br> <br>By Rob Freeman
-            12th August 2023</p>
     </div>
+
+
     <footer class="galaxy-footer">
         <div class="footer-first">
-        <div class="left-column">
-        <div class="footer-column about-us-footer">
-            <h3>About Us</h3>
-            <ul>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">Mission</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>        
-        </div>
-        <div class="footer-column support-footer">
-            <h3>Help and Support</h3>
-            <ul>
-                <li><a href="#">English Galaxy FAQs</a></li>
-            </ul>        
-        </div>
+           <div class="left-column">
+              <div class="footer-column about-us-footer">
+                 <h3>About Us</h3>
+                    <ul>
+                       <li><a href="blog.html">Blog</a></li>
+                       <li><a href="category_sd1.html">Category</a></li>
+                       <li><a href="career.html">Career</a></li>
+                    </ul>        
+              </div>
+              <div class="footer-column support-footer">
+                 <h3>Help and Support</h3>
+                    <ul>
+                       <li><a href="faq.html">English Galaxy FAQs</a></li>
+                    </ul>        
+              </div>
         </div>
         <div class="right-column">
-        <div class="footer-column social-footer">
-            <h3>Socials</h3>
-            <ul class="social-icons">
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
-            </ul>        
-        </div>
+           <div class="footer-column social-footer">
+              <h3>Socials</h3>
+                 <ul class="social-icons">
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+                 </ul>        
+           </div>
         </div>
         </div>
 
