--- a/category_sd1.html
+++ b/category_sd1.html
@@ -4,252 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Category</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<style>
-    body {
-    background:linear-gradient(to top,#0f3462,#09203d, #07182d);
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
-    width: 100%;
-    color: white;
-}
-/* Galaxy header style */
-.galaxy-header {
-    background-color:#233954;
-    color: white;
-    text-align: center;
-}
-
-.header-content {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center;
-}
-
-.left-section {
-    display: flex; 
-    align-items: center;
-}
-
-/* Logo styles */
-.logo img {
-	float: left;
-    max-width: 75px; 
-	margin-right: 60px;
-	margin-left: 18px;
-	padding: 5px;
-}
-
-.user-controls {
-	float: right;
-	margin-left: 42px;
-	text-align: center;
-	color: white;
-	cursor: pointer;
-	border-radius: 5px;
-	
-
-}
-
-.button:hover {
-	background-color:#f7941d;
-	color: black;
-}
-
-.navbar ul {
-    list-style: none;
-    display: flex;
-}
-
-.navbar li {
-    margin-right: 55px;
-}
-
-.navbar a {
-	padding: 10px 5px;
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    font-size: 15px;
-}
-
-.navbar a:hover {
-    color: #f7941d; 
-}
-
-.sign-in-button {
-    background-color: transparent;
-	font-weight: bold;
-    color: white;
-    border: 1px solid white;
-    border-radius: 25px;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-}
-
-.sign-in-button:hover {
-    background-color:#f7941d;
-	border: none;
-    color:black; /* Change color on hover */
-}
-
-.category-menu{
-	position: relative;
-  	display: inline-block;
-}
-
-.menu-icon {
-    font-size: 15px;
-	transition: color 0.2s ease-in-out; 
-    margin-left: 5px; 
-}
-
-.dropdown-content {
-	margin-top: 5px;
-	display: none;
-	position: absolute;
-	background-color: #f9f9f9;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-  }
-  
-.dropdown-content a {
-	color: black;
-	text-align: left;
-	font-size: 11px;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-}
-  
-.dropdown-content a:hover {
-	background-color:#f7941d;
-	color: white;
-}
-
-.category-menu:hover .dropdown-content {
-	display: block;
-}
-
-.category-menu:hover{
-	color:#f7941d;
-}
-
-        .judul{
-            text-align: center;
-        }
-        h1{
-            color:#f7941d;
-            text-decoration-line: underline;
-            text-decoration-style: double;
-        }
-        h2{
-            text-shadow: 3px 3px blue;
-        }
-        .banner_container {
-            clear: both;
-        }
-        .banner_container img {
-            width: 25%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-            border-radius: 5px;
-        }
-        .content{
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            text-align:justify;
-            padding-left: 20px;
-        }
-/*click back and next*/
-.change-page{
-display: flex;
-justify-content: space-around;
-padding: 0 25px;
-}
-
-#previous-btn{
-text-align: left;
-}
-
-#next-btn{
-text-align: right;
-}
-
-/*footer*/
-
-.footer-first {
-	display: flex;
-  	flex-wrap: wrap;
-	justify-content: center;
-  	align-content: flex-start;
-	background-color:#233954;
-	color: #fff;
-	padding: 30px;
-  }
-  
-  
-  .footer-column {
-	margin: 0 100px;
-  }
-  
-  .galaxy-footer h3 {
-	font-size: 18px;
-	margin-bottom: 10px;
-	color:#f7941d;
-  }
-  
-  .galaxy-footer ul {
-	list-style-type: none;
-	padding: 0;
-  }
-  
-  .galaxy-footer ul li {
-	margin-bottom: 8px;
-  }
-
-  ul li a{
-	font-size: 14px;
-  }
-  
-  .galaxy-footer ul li a {
-	text-decoration: none;
-	color: #fff;
-	transition: color 0.3s ease;
-  }
-  
-  .galaxy-footer ul li a:hover {
-	color:#aeb3ba; /* Change color on hover */
-  }
-  
-  .social-icons {
-	display: flex;
-	list-style-type: none;
-	padding: 0;
-	margin-top: 10px;
-  }
-  
-  .social-icons li {
-	margin-right: 10px;
-  }
-  
-  .social-icons a {
-	text-decoration: none;
-	color: #fff;
-	font-size: 24px;
-	transition: color 0.3s ease;
-  }
-
-  .footer-second{
-	text-align: center;
-	background-color:#0f1823;
-	color: #fff;
-	padding: 30px;
-  }
-</style>
 <body>
     <header class="galaxy-header">
         <div class="header-content">
@@ -259,80 +16,103 @@ text-align: right;
                 </div>
                 <nav class="navbar">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Tips&Trick</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li class="category-menu">
                             <a href="#">Category</a>
                             <span class="menu-icon">&#9776;</span>
                             <div class="dropdown-content">
-                                <a href="#">Sekolah Dasar(SD)</a>
-                                <a href="#">Sekolah Menengah Pertama(SMP)</a>
-                                <a href="#">Sekolah Menengah Akhir(SMA)</a>
+                                <a href="category_sd1.html">Sekolah Dasar(SD)</a>
+                                <a href="category_smp1.html">Sekolah Menengah Pertama(SMP)</a>
+                                <a href="category_sma1.html">Sekolah Menengah Akhir(SMA)</a>
                             </div>
-                        </li>        
-                        <li><a href="#">About Us</a></li>               
-                        <li><a href="#">Career</a></li>
-                        <li><a href="#">Blog</a></li>
+                        </li>                        
+                        <li><a href="career.html">Career</a></li>
+                        <li><a href="tips&trick.html">Tips & Trick</a></li>
                     </ul>
-                </nav>
-                <div class="user-controls">
-                    <button class="sign-in-button">Login/Sign In</button>
-                </div>
+                </nav>            
             </div>
+           <div class="user-controls">
+            <a href="login.html">
+                <button class="sign-in-button">Login/Sign In</button>
+            </a>
+           </div>
         </div>
     </header>
+
+    <div class="main-category">
     <div class="judul">
-        <h1>SD</h1>
-        <h2>Basic English Concepts</h2>
+        <h1>Sekolah Dasar (SD)</h1>
+        <h2>Introduction to Basic English Vocabullary</h2>
     </div>
     <div class="banner_container">
-        <img src="img/category1.png">
+        <img src="img/categorysd1.png">
     </div>
     <div class="content">
-        <h2>Alphabet</h2>
-        <p>The alphabet is the alphabet and how to read the letters in the alphabet.</p>
-        <h2>Animals</h2>
-        <p> In the animal material, it is divided into two, namely tame animals or animals that are usually kept by humans because they are obedient and wild animals that are usually found in the forest.</p>
-        <h2>Numbers</h2>
-        <p> Numbers are numbers, children are taught English about numbers and how to read them.</p>
-        <h2>Colors</h2>
-        <p> Colors, namely introducing colors to children, are taught using English and how to read them.</p>
-        <h2>Part of Body</h2>
-        <p> body parts, namely the introduction of body parts to children taught using English and how to read them.</p>
+        <p>Basic English vocabulary is very important for good communication in the English language. If you're starting to learn English or want to improve your language skills,  it's essential to learn these important words and phrases first. Here's a simple introduction to some basic English vocabulary categories:</p>
+        <h3>1. Greetings and Social Expressions:</h3>
+        <p>
+            &#8226 Hello<br>
+            &#8226 Hi<br>
+            &#8226 Good morning<br>
+            &#8226 Good afternoon<br>
+            &#8226 Good evening<br>
+            &#8226 How are you?<br>
+            &#8226 Thank you
+        </p>
+        <h3>2. Numbers:</h3>
+        <p> 
+            &#8226 One<br>
+            &#8226 Two<br>
+            &#8226 Three
+        </p>
+
+        <h3>2. Numbers:</h3>
+        <p>
+            &#8226 Sunday<br>
+            &#8226 Monday<br>
+            &#8226 Tuesday<br>
+            &#8226 Wednesday<br>
+            &#8226 Thursday<br>
+            &#8226 Friday<br>
+            &#8226 Saturday
+        </p>
     </div>
     <div class="change-page">
-        <a href=# id="previous-btn">Previous </a>
-        <a href=# id="next-btn">Next</a>
-        </div>
-        
+        <a href=# id="previous" hidden>&#8592 Previous</a>
+        <a href="category_sd2.html" id="next">Next &#8594</a>
+    </div>
+    </div>
+
     <footer class="galaxy-footer">
         <div class="footer-first">
-        <div class="left-column">
-        <div class="footer-column about-us-footer">
-            <h3>About Us</h3>
-            <ul>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">Mission</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>        
-        </div>
-        <div class="footer-column support-footer">
-            <h3>Help and Support</h3>
-            <ul>
-                <li><a href="#">English Galaxy FAQs</a></li>
-            </ul>        
-        </div>
+           <div class="left-column">
+              <div class="footer-column about-us-footer">
+                 <h3>About Us</h3>
+                    <ul>
+                       <li><a href="blog.html">Blog</a></li>
+                       <li><a href="category_sd1.html">Category</a></li>
+                       <li><a href="career.html">Career</a></li>
+                    </ul>        
+              </div>
+              <div class="footer-column support-footer">
+                 <h3>Help and Support</h3>
+                    <ul>
+                       <li><a href="faq.html">English Galaxy FAQs</a></li>
+                    </ul>        
+              </div>
         </div>
         <div class="right-column">
-        <div class="footer-column social-footer">
-            <h3>Socials</h3>
-            <ul class="social-icons">
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
-            </ul>        
-        </div>
+           <div class="footer-column social-footer">
+              <h3>Socials</h3>
+                 <ul class="social-icons">
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+                 </ul>        
+           </div>
         </div>
         </div>
 
