--- a/login.html
+++ b/login.html
@@ -1,123 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <style>
-        body{
-        background-image: url(img/bgimage.png);
-        background-size: cover;
-        background-repeat: no-repeat;   
-}
-
-.login{
-    width: 320px;
-    height: 460px;
-    top: 50%;
-    left: 50%;
-    padding: 50px 30px;
-    position: absolute;
-    background: #fff;
-    color: #000;
-    transform: translate(-50%, -50%);
-    box-sizing: border-box;
-    border: 1px solid #000;
-    border-radius: 10px;
-}
-
-.avatar {
-    width: 80px;
-    height: 80px;
-    top: -10%;
-    left: calc(50% - 40px);
-    position: absolute;
-    border: 1px solid white;
-    border-radius: 50%;
-}
-
-h1 {
-    text-align: center;
-    font-size: 22px;
-    margin-bottom: 15px;
-}
-
-.login p{
-    font-weight: bold;
-}
-
-.login input{
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-.form-input{
-    height: 40px;
-    background: transparent;
-    color: #fff;
-    border: none;
-    border-bottom: 1px solid black;
-    outline: none;
-}
-
-.btn{
-    height: 38px;
-    background: #f7941d;
-    color: #fff;
-    font-size: 18px;
-    border: 1px solid #fff;
-    border-radius: 20px;
-    outline: none;
-    transition: 0.5s ease;
-}
-
-.btn:hover {
-    cursor: pointer;
-    background: #ff4500
-}
-
-.login a{
-    font-size: 12px;
-    line-height: 20px;
-}
-
-.login a:hover{
-    color: blue;
-
-}
-
-.register-link{
-    font-size: 14px;
-    text-align: center;
-    margin-top: 20px;
-}
-
-.register-link p a{
-    font-size: 15px;
-    color: #000;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.register-link p a:hover{
-    text-decoration: underline;
-}
-
-.login .input-group input{
-    color: #fff;
-    height: 35px;
-    width: 270px;
-    box-sizing: border-box;
-    font-size: 10px;
-    border: 3px solid black;
-    border-radius: 10px;
-    background-color: black;
-}
-
-    </style>
+    <title>Webpage Design</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
-<body>
+<body class="log">
     <div class="login">
         <img src="img/profil.png"  class="avatar">
         <h1>Login</h1>
@@ -128,7 +18,7 @@ h1 {
             <input type="password" class="form-input" placeholder="Enter Password">
             <input type="submit" class="btn" value="Login">
             <div class="register-link">
-                <p>Don't have an account? <a href="registrasi.html">Register</a></p>
+                <p>Don't have an account? <a href="register.html">Register</a></p>
             </div>
 
         </form>
