--- a/tips&trick.html
+++ b/tips&trick.html
@@ -4,237 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tips&Trick</title>
-    <style>
-        body {
-        background:linear-gradient(to top,#0f3462,#09203d, #07182d);
-        margin: 0;
-        padding: 0;
-        font-family: 'Montserrat', sans-serif;
-        width: 100%;
-        color: white;
-    }
-        .galaxy-header {
-    background-color:#233954;
-    color: white;
-    text-align: center;
-}
-
-.header-content {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center;
-}
-
-.left-section {
-    display: flex; 
-    align-items: center;
-}
-
-/* Logo styles */
-.logo img {
-	float: left;
-    max-width: 75px; 
-	margin-right: 60px;
-	margin-left: 18px;
-	padding: 5px;
-}
-
-.user-controls {
-	float: right;
-	margin-left: 42px;
-	text-align: center;
-	color: white;
-	cursor: pointer;
-	border-radius: 5px;
-	
-
-}
-
-.button:hover {
-	background-color:#f7941d;
-	color: black;
-}
-
-.navbar ul {
-    list-style: none;
-    display: flex;
-}
-
-.navbar li {
-    margin-right: 55px;
-}
-
-.navbar a {
-	padding: 10px 5px;
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    font-size: 15px;
-}
-
-.navbar a:hover {
-    color: #f7941d; 
-}
-
-.sign-in-button {
-    background-color: transparent;
-	font-weight: bold;
-    color: white;
-    border: 1px solid white;
-    border-radius: 25px;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-}
-
-.sign-in-button:hover {
-    background-color:#f7941d;
-	border: none;
-    color:black; /* Change color on hover */
-}
-
-.category-menu{
-	position: relative;
-  	display: inline-block;
-}
-
-.menu-icon {
-    font-size: 15px;
-	transition: color 0.2s ease-in-out; 
-    margin-left: 5px; 
-}
-
-.dropdown-content {
-	margin-top: 5px;
-	display: none;
-	position: absolute;
-	background-color: #f9f9f9;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-  }
-  
-.dropdown-content a {
-	color: black;
-	text-align: left;
-	font-size: 11px;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-}
-  
-.dropdown-content a:hover {
-	background-color:#f7941d;
-	color: white;
-}
-
-.category-menu:hover .dropdown-content {
-	display: block;
-}
-
-.category-menu:hover{
-	color:#f7941d;
-}
-        .judul{
-            font-size: 22px;
-            font-weight: bold;
-            
-        }
-        .text{
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            border-radius: 2px;
-            box-shadow: 50px 10px #258cf4;
-            margin-top: 20px;
-            padding: 30px;
-            text-align: justify;
-            background: #0F4ED8;
-        }
-        p{
-            font-family:cursive;
-        }
-        h2{
-            text-shadow: 3px 3px blue;
-            font-size: 20px;
-            margin-top: 25px;
-        }
-        img{
-            width: 160px;
-            float: left;
-            border-radius: 5px;
-            margin-right: 20px;
-            margin-top: 10px;
-        } 
-        .keterangan p {
-            text-align: justify;
-        }
-        .footer-first {
-	display: flex;
-  	flex-wrap: wrap;
-	justify-content: center;
-  	align-content: flex-start;
-	background-color:#233954;
-	color: #fff;
-	padding: 30px;
-  }
-  
-  .footer-column {
-	margin: 0 100px;
-  }
-  
-  .galaxy-footer h3 {
-	font-size: 18px;
-	margin-bottom: 10px;
-	color:#f7941d;
-  }
-  
-  .galaxy-footer ul {
-	list-style-type: none;
-	padding: 0;
-  }
-  
-  .galaxy-footer ul li {
-	margin-bottom: 8px;
-  }
-
-  ul li a{
-	font-size: 14px;
-  }
-  
-  .galaxy-footer ul li a {
-	text-decoration: none;
-	color: #fff;
-	transition: color 0.3s ease;
-  }
-  
-  .galaxy-footer ul li a:hover {
-	color:#aeb3ba; /* Change color on hover */
-  }
-  
-  .social-icons {
-	display: flex;
-	list-style-type: none;
-	padding: 0;
-	margin-top: 10px;
-  }
-  
-  .social-icons li {
-	margin-right: 10px;
-  }
-  
-  .social-icons a {
-	text-decoration: none;
-	color: #fff;
-	font-size: 24px;
-	transition: color 0.3s ease;
-  }
-
-  .footer-second{
-	text-align: center;
-	background-color:#0f1823;
-	color: #fff;
-	padding: 30px;
-  }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header class="galaxy-header">
@@ -245,95 +16,126 @@
                 </div>
                 <nav class="navbar">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Tips&Trick</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li class="category-menu">
                             <a href="#">Category</a>
                             <span class="menu-icon">&#9776;</span>
                             <div class="dropdown-content">
-                                <a href="#">Sekolah Dasar(SD)</a>
-                                <a href="#">Sekolah Menengah Pertama(SMP)</a>
-                                <a href="#">Sekolah Menengah Akhir(SMA)</a>
+                                <a href="category_sd1.html">Sekolah Dasar(SD)</a>
+                                <a href="category_smp1.html">Sekolah Menengah Pertama(SMP)</a>
+                                <a href="category_sma1.html">Sekolah Menengah Akhir(SMA)</a>
                             </div>
-                        </li>        
-                        <li><a href="#">About Us</a></li>               
-                        <li><a href="#">Career</a></li>
-                        <li><a href="#">Blog</a></li>
+                        </li>                        
+                        <li><a href="career.html">Career</a></li>
+                        <li><a href="tips&trick.html">Tips & Trick</a></li>
                     </ul>
-                </nav>
-                <div class="user-controls">
-                    <button class="sign-in-button">Login/Sign In</button>
-                </div>
+                </nav>            
             </div>
+           <div class="user-controls">
+            <a href="login.html">
+                <button class="sign-in-button">Login/Sign In</button>
+            </a>
+           </div>
         </div>
     </header>
-    <div class="judul">Tips & Trick</div>
-    <div class="text">Don't worry if you can't speak English yet. 
-        There are many easy ways to learn English that you can try. <br> After all, to become proficient in a field, we must first learn diligently, right? 
-        Here are 5 ways to learn English for beginners that you can apply.</div>
+
+    <div class="main-tips">
+    <div class="judul">
+        <h1>Tips & Tricks</h1>
+    </div>
+    <div class="text"><p>Don't worry if you can't speak English yet. 
+        There are many easy ways to learn English that you can try. After all, to become proficient in a field, we must first learn diligently, right? 
+        Here are 5 ways to learn English for beginners that you can apply.</p></div>
     <div class="left_content">
+        <a href="tips&trick1.html">
+        <div class="tips">
         <img src="img/konsisten.jpeg">
         <div class="keterangan">
-                <h2>Consistent Practice</h2>
+                <h3>Consistent Practice</h3>
                 <p>Dedicate daily time to practice English. Give yourself challenges in English. Try to write a short essay or a speech on a topic you are interested in. This will help you improve your writing and speaking skills. In addition to speaking with people in real life, you can also participate in online discussions in English. This can help you practice your writing and speaking skills without having to meet in person.</p>
         </div>
+        </div>
+        </a>
+
+        <a href="tips&trick2.html">
+        <div class="tips">
         <img src="img/immerse.jpeg">
         <div class="keterangan">
-                <h2>Immerse Yourself</h2>
+                <h3>Immerse Yourself</h3>
                 <p>Set a fixed time every day to practice English. This can be in the morning before work or school or in the evening. Importantly, make it an integral part of your daily routine. Don't just stick to one type of material. Read books, listen to podcasts, watch movies or videos, and take online courses. This variety will help you become accustomed to various language situations.</p>
         </div>
+        </div>
+        </a>
+
+        <a href="tips&trick3.html">
+        <div class="tips">
         <img src="img/interactive.jpeg">
         <div class="keterangan">
-                <h2>Interactive Learning</h2>
+                <h3>Interactive Learning</h3>
                 <p>Engage in conversations with native speakers or language partners. This immersive experience will greatly enhance your language skills by providing real-life context and feedback. Additionally, you can explore language exchange meetups, online chat platforms, or language learning apps designed to connect learners with native speakers for conversational practice. </p>
         </div>
+        </div>
+        </a>
+
+        <a href="tips&trick4.html">
+        <div class="tips">
         <img src="img/vocabulary.jpeg">
         <div class="keterangan">
-                <h2>Vocabulary Building</h2>
+                <h3>Vocabulary Building</h3>
                 <p>Learn new words every day and use them in sentences. This will help you gradually develop your vocabulary and ensure that you truly understand how to use them in the right contexts. This process will help improve your communication skills and give you greater confidence in speaking and writing the language you are learning. So, let's start with new words today!</p>
         </div>
+        </div>
+        </a>
+
+        <a href="tips&trick5.html">
+        <div class="tips">
         <img src="img/app.jpeg">
         <div class="keterangan">
-                <h2>Languange Apps</h2>
+                <h3>Languange Apps</h3>
                 <p>Language learning apps have transformed the way we master new languages, providing a user-friendly and immersive platform for honing reading, writing, speaking, and listening abilities. With a plethora of interactive exercises and activities, these apps make the process of acquiring language skills both convenient and engaging.<br><br></p>
-        </div
+        </div>
+        </div>
+        </a>
 
-    </div>
-<footer class="galaxy-footer">
-        <div class="footer-first">
-        <div class="left-column">
-        <div class="footer-column about-us-footer">
-            <h3>About Us</h3>
-            <ul>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">Mission</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>        
-        </div>
-        <div class="footer-column support-footer">
-            <h3>Help and Support</h3>
-            <ul>
-                <li><a href="#">English Galaxy FAQs</a></li>
-            </ul>        
         </div>
         </div>
-        <div class="right-column">
-        <div class="footer-column social-footer">
-            <h3>Socials</h3>
-            <ul class="social-icons">
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
-            </ul>        
-        </div>
-        </div>
-        </div>
-
-        <div class="footer-second">
-            <p>&copy; 2023 English Galaxy. All Rights Reserved.</p>
-        </div>
-    </footer>
+        <footer class="galaxy-footer">
+            <div class="footer-first">
+               <div class="left-column">
+                  <div class="footer-column about-us-footer">
+                     <h3>About Us</h3>
+                        <ul>
+                           <li><a href="blog.html">Blog</a></li>
+                           <li><a href="category_sd1.html">Category</a></li>
+                           <li><a href="career.html">Career</a></li>
+                        </ul>        
+                  </div>
+                  <div class="footer-column support-footer">
+                     <h3>Help and Support</h3>
+                        <ul>
+                           <li><a href="faq.html">English Galaxy FAQs</a></li>
+                        </ul>        
+                  </div>
+            </div>
+            <div class="right-column">
+               <div class="footer-column social-footer">
+                  <h3>Socials</h3>
+                     <ul class="social-icons">
+                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+                     </ul>        
+               </div>
+            </div>
+            </div>
+    
+            <div class="footer-second">
+                <p>&copy; 2023 English Galaxy. All Rights Reserved.</p>
+            </div>
+        </footer>
 
 </body>
 </html>
