--- a/tips&trick2.html
+++ b/tips&trick2.html
@@ -3,238 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tips&Trick2</title>
+    <title>Tips&Trick</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<style>
-     body {
-        background:linear-gradient(to top,#0f3462,#09203d, #07182d);
-        margin: 0;
-        padding: 0;
-        font-family: 'Montserrat', sans-serif;
-        width: 100%;
-        color: white;
-    }
-        .galaxy-header {
-    background-color:#233954;
-    color: white;
-    text-align: center;
-}
-
-.header-content {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center;
-}
-
-.left-section {
-    display: flex; 
-    align-items: center;
-}
-
-/* Logo styles */
-.logo img {
-	float: left;
-    max-width: 75px; 
-	margin-right: 60px;
-	margin-left: 18px;
-	padding: 5px;
-}
-
-.user-controls {
-	float: right;
-	margin-left: 42px;
-	text-align: center;
-	color: white;
-	cursor: pointer;
-	border-radius: 5px;
-	
-
-}
-
-.button:hover {
-	background-color:#f7941d;
-	color: black;
-}
-
-.navbar ul {
-    list-style: none;
-    display: flex;
-}
-
-.navbar li {
-    margin-right: 55px;
-}
-
-.navbar a {
-	padding: 10px 5px;
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    font-size: 15px;
-}
-
-.navbar a:hover {
-    color: #f7941d; 
-}
-
-.sign-in-button {
-    background-color: transparent;
-	font-weight: bold;
-    color: white;
-    border: 1px solid white;
-    border-radius: 25px;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-}
-
-.sign-in-button:hover {
-    background-color:#f7941d;
-	border: none;
-    color:black; /* Change color on hover */
-}
-
-.category-menu{
-	position: relative;
-  	display: inline-block;
-}
-
-.menu-icon {
-    font-size: 15px;
-	transition: color 0.2s ease-in-out; 
-    margin-left: 5px; 
-}
-
-.dropdown-content {
-	margin-top: 5px;
-	display: none;
-	position: absolute;
-	background-color: #f9f9f9;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-  }
-  
-.dropdown-content a {
-	color: black;
-	text-align: left;
-	font-size: 11px;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-}
-  
-.dropdown-content a:hover {
-	background-color:#f7941d;
-	color: white;
-}
-
-.category-menu:hover .dropdown-content {
-	display: block;
-}
-
-.category-menu:hover{
-	color:#f7941d;
-}
-    .judul{
-            font-family:Cambria, Cochin, Georgia;
-            font-size: 22px;
-            font-weight: bold;
-        }
-        img{
-            width: 160px;
-            float: left;
-            border-radius: 5px;
-            margin-right: 20px;
-        }
-        .left_content {
-            font-family: cursive;
-            text-align: justify;
-            padding-left: 20px;
-        }
-        .right_content{
-            font-family: cursive;
-            text-align: justify;
-            margin-top: 50px;
-            margin-bottom: 40px;
-        }
-        h2{
-            text-shadow: 3px 3px blue;
-        }
-        .left_content p{
-            padding-right: 20px;
-        }
-        .right_content p{
-            padding-left: 20px;
-        }
-        .footer-first {
-	display: flex;
-  	flex-wrap: wrap;
-	justify-content: center;
-  	align-content: flex-start;
-	background-color:#233954;
-	color: #fff;
-	padding: 30px;
-  }
-  
-  .footer-column {
-	margin: 0 100px;
-  }
-  
-  .galaxy-footer h3 {
-	font-size: 18px;
-	margin-bottom: 10px;
-	color:#f7941d;
-  }
-  
-  .galaxy-footer ul {
-	list-style-type: none;
-	padding: 0;
-  }
-  
-  .galaxy-footer ul li {
-	margin-bottom: 8px;
-  }
-
-  ul li a{
-	font-size: 14px;
-  }
-  
-  .galaxy-footer ul li a {
-	text-decoration: none;
-	color: #fff;
-	transition: color 0.3s ease;
-  }
-  
-  .galaxy-footer ul li a:hover {
-	color:#aeb3ba; /* Change color on hover */
-  }
-  
-  .social-icons {
-	display: flex;
-	list-style-type: none;
-	padding: 0;
-	margin-top: 10px;
-  }
-  
-  .social-icons li {
-	margin-right: 10px;
-  }
-  
-  .social-icons a {
-	text-decoration: none;
-	color: #fff;
-	font-size: 24px;
-	transition: color 0.3s ease;
-  }
-
-  .footer-second{
-	text-align: center;
-	background-color:#0f1823;
-	color: #fff;
-	padding: 30px;
-  }
-</style>
 <body>
     <header class="galaxy-header">
         <div class="header-content">
@@ -244,67 +16,83 @@
                 </div>
                 <nav class="navbar">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Tips&Trick</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li class="category-menu">
                             <a href="#">Category</a>
                             <span class="menu-icon">&#9776;</span>
                             <div class="dropdown-content">
-                                <a href="#">Sekolah Dasar(SD)</a>
-                                <a href="#">Sekolah Menengah Pertama(SMP)</a>
-                                <a href="#">Sekolah Menengah Akhir(SMA)</a>
+                                <a href="category_sd1.html">Sekolah Dasar(SD)</a>
+                                <a href="category_smp1.html">Sekolah Menengah Pertama(SMP)</a>
+                                <a href="category_sma1.html">Sekolah Menengah Akhir(SMA)</a>
                             </div>
-                        </li>        
-                        <li><a href="#">About Us</a></li>               
-                        <li><a href="#">Career</a></li>
-                        <li><a href="#">Blog</a></li>
+                        </li>                        
+                        <li><a href="career.html">Career</a></li>
+                        <li><a href="tips&trick.html">Tips & Trick</a></li>
                     </ul>
-                </nav>
-                <div class="user-controls">
-                    <button class="sign-in-button">Login/Sign In</button>
-                </div>
+                </nav>            
             </div>
+           <div class="user-controls">
+            <a href="login.html">
+                <button class="sign-in-button">Login/Sign In</button>
+            </a>
+           </div>
         </div>
     </header>
-    <div class="judul">Tips & Trick</div>
+    <div class="main-tips">
+<div class="judul">
+    <h1>Tips & Trick</h1>
     <h2>Immerse Yourself: Surround Yourself with English Media - Movies, Music, Books.</h2>
-    <div class="left_content">
-        <p ><img src="img/g3.jpeg" style="float:left;"/>Selecting English-language movies and TV series is a valuable language-learning strategy. Begin by using subtitles in your native language to grasp the storyline and context. Gradually transition to English subtitles to improve listening skills, focusing on pronunciation and intonation. Finally, challenge yourself by watching without any subtitles to enhance your overall language comprehension. This step-by-step approach will help you become more confident and proficient in English while enjoying your favorite entertainment.</p>
+</div>
+    <div class="content">
+    <div class="movie_content">
+        <img src="img/g3.jpeg" style="float:left;">
+        <p> Selecting English-language movies and TV series is a valuable language-learning strategy. Begin by using subtitles in your native language to grasp the storyline and context. Gradually transition to English subtitles to improve listening skills, focusing on pronunciation and intonation. Finally, challenge yourself by watching without any subtitles to enhance your overall language comprehension. This step-by-step approach will help you become more confident and proficient in English while enjoying your favorite entertainment.</p>
     </div>
-    <div class="right_content">
-        <p style="text-align:justify";><img src="img/g31.jpeg" style="float:right;"/>Listening to English songs and paying close attention to the lyrics is a fun and effective way to improve your language skills. Singing along not only helps with pronunciation and rhythm but also enhances your ability to hear and reproduce the correct intonation. Additionally, if you're curious about the song's meaning, you can look up the lyrics and their interpretations to gain a deeper understanding of the context and cultural references within the music. This combination of music and language learning can make the process more engaging and memorable.</p>
+    <div class="movie_content">
+        <p style="text-align:justify";>Listening to English songs and paying close attention to the lyrics is a fun and effective way to improve your language skills. Singing along not only helps with pronunciation and rhythm but also enhances your ability to hear and reproduce the correct intonation. Additionally, if you're curious about the song's meaning, you can look up the lyrics and their interpretations to gain a deeper understanding of the context and cultural references within the music. This combination of music and language learning can make the process more engaging and memorable.</p>
+        <img src="img/g31.jpeg" style="float:right;"/>
     </div>
-    <div class="left_content">
-        <p ><img src="img/g32.jpeg" style="float:left;"/>Starting with books or articles that align with your current English proficiency level is a smart approach to language improvement. As you become more comfortable with the language, gradually seek out more challenging texts to expand your vocabulary and comprehension skills. It's essential to keep a dictionary or a language reference tool readily available while reading. This allows you to quickly look up unfamiliar words, understand their meanings, and reinforce your understanding of the text.<br><br></p>
+    <div class="movie_content">
+        <img src="img/g32.jpeg" style="float:left;"/>
+        <p >Starting with books or articles that align with your current English proficiency level is a smart approach to language improvement. As you become more comfortable with the language, gradually seek out more challenging texts to expand your vocabulary and comprehension skills. It's essential to keep a dictionary or a language reference tool readily available while reading. This allows you to quickly look up unfamiliar words, understand their meanings, and reinforce your understanding of the text.<br><br></p>
     </div>
+    </div>
+    <div class="change-page">
+        <a href="tips&trick2.html" id="previous">&#8592 Previous</a>
+        <a href="tips&trick3.html" id="next">Next &#8594</a>
+    </div>
+    </div>
+
     <footer class="galaxy-footer">
         <div class="footer-first">
-        <div class="left-column">
-        <div class="footer-column about-us-footer">
-            <h3>About Us</h3>
-            <ul>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">Mission</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>        
-        </div>
-        <div class="footer-column support-footer">
-            <h3>Help and Support</h3>
-            <ul>
-                <li><a href="#">English Galaxy FAQs</a></li>
-            </ul>        
-        </div>
+           <div class="left-column">
+              <div class="footer-column about-us-footer">
+                 <h3>About Us</h3>
+                    <ul>
+                       <li><a href="blog.html">Blog</a></li>
+                       <li><a href="category_sd1.html">Category</a></li>
+                       <li><a href="career.html">Career</a></li>
+                    </ul>        
+              </div>
+              <div class="footer-column support-footer">
+                 <h3>Help and Support</h3>
+                    <ul>
+                       <li><a href="faq.html">English Galaxy FAQs</a></li>
+                    </ul>        
+              </div>
         </div>
         <div class="right-column">
-        <div class="footer-column social-footer">
-            <h3>Socials</h3>
-            <ul class="social-icons">
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
-            </ul>        
-        </div>
+           <div class="footer-column social-footer">
+              <h3>Socials</h3>
+                 <ul class="social-icons">
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+                 </ul>        
+           </div>
         </div>
         </div>
 
