--- a/career.html
+++ b/career.html
@@ -59,7 +59,7 @@
       <!-- content card -->
       <div class="col-6 right">
         <div class="card">
-          <div class="imgWrap"><img src="img/fotocard1.svg" id="foto1""></div>
+          <div class="imgWrap"><img src="img/fotocard1.svg" id="foto1"></div>
           <div class="text">
             <p class="center" id="text">Connection</p>
             <p id="text2">
