--- a/career.html
+++ b/career.html
@@ -13,7 +13,7 @@
         <div class="header-content">
             <div class="left-section">
                 <div class="logo">
-                    <img src="img/logo.png" alt="Galaxy Logo">
+                  <a href="index.html"><img src="img/logo.png" alt="Galaxy Logo"></a>
                 </div>
                 <nav class="navbar">
                     <ul>
