--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 
 <body class="log">
     <div class="login">
-        <img src="img/profil.png"  class="avatar">
+        <a href="index.html"><img src="img/logo.png" alt="Galaxy Logo"></a>
         <h1>Login</h1>
         <form>
             <p>Username</p>
