--- a/tips&trick2.html
+++ b/tips&trick2.html
@@ -12,7 +12,7 @@
         <div class="header-content">
             <div class="left-section">
                 <div class="logo">
-                    <img src="img/logo.png" alt="Galaxy Logo">
+                    <a href="index.html"><img src="img/logo.png" alt="Galaxy Logo"></a>
                 </div>
                 <nav class="navbar">
                     <ul>
