perubahan di file java script
perubahan di file javascript

--- a/category_sd1.html
+++ b/category_sd1.html
@@ -6,6 +6,7 @@
     <title>Introduction to Basic English Vocabullary</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
 <body>
     <header class="galaxy-header">
@@ -44,11 +45,12 @@
     <div class="main-category">
     <div class="judul">
         <h1>Sekolah Dasar (SD)</h1>
-        <h2>Introduction to Basic English Vocabullary</h2>
+        <h2 class="letters">Introduction to Basic English Vocabullary</h2>
     </div>
     <div class="banner_container">
         <img src="img/categorysd1.png">
     </div>
+    <script src="js/script.kategori.js" type="text/javascript"></script>
     <div class="content">
         <p>Basic English vocabulary is very important for good communication in the English language. If you're starting to learn English or want to improve your language skills,  it's essential to learn these important words and phrases first. Here's a simple introduction to some basic English vocabulary categories:</p>
         <h3>1. Greetings and Social Expressions:</h3>
