--- a/category_sma1.html
+++ b/category_sma1.html
@@ -6,6 +6,7 @@
     <title>Recount Text</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
 <body>
     <header class="galaxy-header">
@@ -40,12 +41,12 @@
            </div>
         </div>
     </header>
-
     <div class="main-category">
     <div class="judul">
         <h1>Sekolah Menengah Atas (SMA)</h1>
-        <h2>Recount Text</h2>
+        <h2 class="letters">Recount Text</h2>
     </div>
+    <script src="js/script.kategori.js" type="text/javascript"></script>
     <div class="banner_container">
         <img src="img/categorysma1.png">
     </div>
@@ -66,7 +67,6 @@
         <a href="category_sma2.html" id="next">Next &#8594</a>
     </div>
     </div>
-
     <footer class="galaxy-footer">
         <div class="footer-first">
            <div class="left-column">
@@ -97,7 +97,6 @@
            </div>
         </div>
         </div>
-
         <div class="footer-second">
             <p>&copy; 2023 English Galaxy. All Rights Reserved.</p>
         </div>
