--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             <div class="register-link">
                 <p>Don't have an account? <a href="register.html">Register</a></p>
             </div>
-
+            <script src="js/script.js" type="text/javascript"></script>
         </form>
     </div>
 </body>
