--- a/FAQ.html
+++ b/FAQ.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Category</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -151,18 +152,6 @@
                 <p>&copy; 2023 English Galaxy. All Rights Reserved.</p>
             </div>
         </footer>
-        <script>
-            const questions = document.querySelectorAll('.question');
-    
-            questions.forEach(question => {
-                question.addEventListener('click', () => {
-                    const answer = question.nextElementSibling;
-                    const toggle = question.querySelector('.toggle');
-                    answer.classList.toggle('show');
-                    toggle.textContent = answer.classList.contains('show') ? '-' : '+';
-                });
-            });
-        </script>
-
+        <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
