--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-
-<body>
+<body id="about.html">
    <header class="galaxy-header">
       <div class="header-content">
           <div class="left-section">
@@ -54,20 +54,22 @@
             <h2>Our Mission</h2>
             <p>Our mission is to empower Indonesia by providing accessible, effective, and engaging English language education, fostering global communication and personal growth.</p>
          </div>
-         <img src="img/rocket.png">
+         <img id="rocket" src="img/rocket.gift.gif">
       </div>
       </div>
-
       <div class="content">
          <div class="vision">
-            <img src="img/world.png">
+            <img id="bumi" src="img/world.png">
+            
             <div class="vision-caption">
                <h2>Our Vision</h2>
                <p>Our is to redefine English language education in Indonesia, making it accessible and transformative for all, fostering universal communication and personal growth.</p>
             </div>
          </div>
+         <script src="js/script-about.js" type="text/javascript"></script>
       </div>
 
+     
       <h2> Our Tutors</h2>
       <div class = "profile">
          <div class="profile-card">
