--- a/career.html
+++ b/career.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
-
   <body>
     <header class="galaxy-header">
         <div class="header-content">
@@ -41,9 +41,7 @@
            </div>
         </div>
     </header>
-
     <div class="main-career">
-      <!-- title -->
       <div class="col-12">
         <div class="titleContent">
           <h2>
@@ -52,9 +50,6 @@
           </h2>
         </div>
       </div>
-      <!-- end title -->
-
-      <!-- content card -->
       <div class="col-6 right">
         <div class="card">
           <div class="imgWrap"><img src="img/fotocard1.svg" id="foto1"></div>
@@ -98,9 +93,7 @@
           </div>
         </div>
       </div>
-      <!-- end content card -->
     </div>
-
     <footer class="galaxy-footer">
       <div class="footer-first">
          <div class="left-column">
