--- a/category_sd2.html
+++ b/category_sd2.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic English Concepts</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
 
 <body>
@@ -45,8 +47,9 @@
     <div class="main-category">
     <div class="judul">
         <h1>Sekolah Dasar (SD)</h1>
-        <h2>Basic English Concepts</h2>
+        <h2 class="letters">Basic English Concepts</h2>
     </div>
+    <script src="js/script.kategori.js" type="text/javascript"></script>
     <div class="banner_container">
         <img src="img/categorysd2.png">
     </div>
