--- a/category_smp2.html
+++ b/category_smp2.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Category</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script> 
 </head>
 <body>
     <header class="galaxy-header">
@@ -44,8 +46,9 @@
     <div class="main-category">
     <div class="judul">
         <h1>Sekolah Menengah Pertama (SMP)</h1>
-        <h2>Asking and Giving Attention </h2>
+        <h2 class="letters">Asking and Giving Attention</h2>
     </div>
+    <script src="js/script.kategori.js" type="text/javascript"></script>
     <div class="banner_container">
         <img src="img/categorysmp2.png">
     </div>
