--- a/index.html
+++ b/index.html
@@ -39,20 +39,19 @@
            </div>
         </div>
     </header>
-
     <div class="main-home">
     <div class="home">
         <div class="content">
             <h1>Mari <br><span>Bergabung Bersama</span> <br>Kami</h1>
-                <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque 
-                 expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus 
-                <br> a quae totam ipsa illum minus laudantium?
-                </p>
-
-            <button class="home-btn"><a href="#">READ MORE</a></button>
-        </div>
-    </div>
-
+            <p class="par">At English Galaxy, we believe that learning is a journey filled with endless opportunities. Just like the vast cosmos, knowledge knows no bounds. 
+                <br> Join us on this voyage of discovery, where every lesson is a star in the galaxy of your learning experience. 
+                <br> Explore, learn, and illuminate your path to success with us.
+            </p>
+                <button class="home-btn" id="GETSTARTED" onclick="window.location.href='login.html'">Get Started</button>
+                <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.12.0/tsparticles.confetti.bundle.min.js"></script>
+                <script src="js/script.js" type="text/javascript"></script>
+             </div>
+         </div>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <div id="formList">
         <div id="list">
