mengubah gambar menjadi video dari yt

--- a/category_sd1.html
+++ b/category_sd1.html
@@ -48,7 +48,7 @@
         <h2 class="letters">Introduction to Basic English Vocabullary</h2>
     </div>
     <div class="banner_container">
-        <img src="img/categorysd1.png">
+        <iframe src="https://www.youtube.com/embed/by1QAoRcc-U?si=7D3x3E_fvB_stYAD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <script src="js/script.kategori.js" type="text/javascript"></script>
     <div class="content">
