--- a/category_sma2.html
+++ b/category_sma2.html
@@ -50,7 +50,7 @@
     </div>
     <script src="js/script.kategori.js" type="text/javascript"></script>
     <div class="banner_container">
-        <img src="img/categorysma2.png">
+        <iframe src="https://www.youtube.com/embed/-96HZVivHB0?si=uyFHCNczSJ9x_Rq-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <div class="content">
         <p>A narrative text is a form of storytelling that presents a sequence of events or a story to entertain, inform, or engage the reader. It typically follows a structure that includes characters, setting, plot, and a theme or message. Here's an explanation of the key elements of the narrative text provided:</p>
