--- a/category_sma1.html
+++ b/category_sma1.html
@@ -48,7 +48,7 @@
     </div>
     <script src="js/script.kategori.js" type="text/javascript"></script>
     <div class="banner_container">
-        <img src="img/categorysma1.png">
+        <iframe src="https://www.youtube.com/embed/c9DrzQ3cTXs?si=J5C1goGxCZ8nPP1B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <div class="content">
         <h3>Characteristics of Recount Text:</h3>
