--- a/category_smp1.html
+++ b/category_smp1.html
@@ -51,7 +51,7 @@
     </div>
     <script src="js/script.kategori.js" type="text/javascript"></script>
     <div class="banner_container">
-        <img src="img/categorysmp1.png">
+        <iframe src="https://www.youtube.com/embed/AHDYG_agm9Y?si=oTqnStlAwV3NfVAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <div class="content">
         <h3>Past Continuous Tense:</h3>
