--- a/category_smp2.html
+++ b/category_smp2.html
@@ -50,7 +50,7 @@
     </div>
     <script src="js/script.kategori.js" type="text/javascript"></script>
     <div class="banner_container">
-        <img src="img/categorysmp2.png">
+        <iframe src="https://www.youtube.com/embed/TvSeWOj0R20?si=zcPBbnmsx3EZQEeA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <div class="content">
         <h3>Asking and Giving Attention </h3>
